# ecommerce_api

./: .coverage  .gitignore  pyproject.toml
ecommerce_api/: app.py  main.py
ecommerce_api/api/: dependencies.py
ecommerce_api/api/routers/: users.py
ecommerce_api/core/: constants.py  exceptions.py  settings.py
ecommerce_api/infrastructure/: database.py
ecommerce_api/models/: __init__.py  cart_items.py  categories.py  discounts.py  machine_requests.py  product_categories.py  product_specifications.py  products.py  repair_job.py  shopping_cart.py  specification_keys.py  users.py
ecommerce_api/repositories/: base_repo.py  product_repo.py  user_repo.py
ecommerce_api/schemas/: product_schema.py  user_schema.py
ecommerce_api/services/: product_service.py  user_services.py
migrations/: env.py
migrations/versions/: 997c4ccc39b9_creating_base_model_tables.py  c15ec9d1d5dd_creating_base_model_tables.py  d4721925f5d5_updating_user_table_to_include_is_.py  d499dafc30dd_define_default_value_for_image_url_and_.py  e328edaa1b9e_updating_product_table_to_make_product_.py
tests/: conftest.py  test_db.py  test_main.py  test_user.py  test_user_db.py
tests/fakes/: fake_base_repo.py  fake_product_repo.py  fake_user_repo.py
tests/integrations/: test_user_flow.py
tests/unit/services/: test_product_service.py  test_shopping_cart_service.py  test_user_service.py
